fix: add 'text-align: justify' style for about section description

--- a/src/app/components/About/Description/Description.styles.module.scss
+++ b/src/app/components/About/Description/Description.styles.module.scss
@@ -10,6 +10,7 @@
   font-size: 14px;
   text-indent: 20px;
   line-height: $line-height;
+  text-align: justify;
 }
 
 @media screen and (min-width: $media-768) {
